# Tars-AI

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  README.md  config.h  config.h.in
src/: main.cpp
src/core/: application.cpp  application.hpp  audio.cpp  audio.hpp  checkers.cpp  checkers.hpp  checkersminmax.cpp  checkersminmax.hpp  window.cpp  window.hpp
src/core/checkers/: board.cpp  board.hpp  checkers.cpp  checkers.hpp  checkersbot.cpp  checkersbot.hpp  checkersminmax.cpp  checkersminmax.hpp
src/core/gl/: gltexture.cpp  gltexture.hpp
